nginx-flux/nginx-istio-flux-gitops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: ns-nginx-flux
  labels:
    app: nginx
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        agentpool: userpool
      topologySpreadConstraints:
        - maxSkew: 3
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: nginx
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          command: ["/bin/sh", "-c"]
          args:
            - |
              [...]
          resources:
            requests:
              cpu: "100m"
              memory: "16Mi"
            limits:
              cpu: "150m"
              memory: "32Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-loadbalancer
  namespace: ns-nginx-flux
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: ns-nginx-flux
spec:
  selector:
    app: aks-istio-ingressgateway-external
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx
  namespace: ns-nginx-flux
spec:
  hosts:
    - "*"
  gateways:
    - nginx-gateway
  http:
    - match:
        - uri:
            prefix: "/flux"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: nginx-loadbalancer
            port:
              number: 80
